--- a/front/src/app/pages/auth/login/login.component.html
+++ b/front/src/app/pages/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <app-auth>
   <div class="auth">
-    <h1 class="auth__title">Connexion</h1>
+    <h1 class="auth__title">Se connecter</h1>
     <form [formGroup]="form" (ngSubmit)="submit()" class="auth__form">
       <div class="auth__input-group">
         <mat-form-field appearance="outline">
