--- a/front/src/app/pages/auth/auth.component.html
+++ b/front/src/app/pages/auth/auth.component.html
@@ -1,5 +1,5 @@
 <div class="page-container">
-  <div class="auth page-container__main">
+  <div class="page-container__main">
     <img class="logo" src="assets/logo.svg" alt="MDD">
     <ng-content></ng-content>
   </div>
