--- a/front/src/app/components/btn/btn.component.scss
+++ b/front/src/app/components/btn/btn.component.scss
@@ -84,13 +84,21 @@ $btn-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     }
   }
 
-  &--cta {
+
+  &--cta, &--submit-cta {
     background-color: $primary;
     color: $text-light;
     border: none;
+    box-shadow: $btn-box-shadow;
 
     &:hover:not(:disabled) {
       background-color: darken($primary, 10%);
+    }
+
+    &:disabled {
+      background-color: $text-secondary;
+      cursor: not-allowed;
+      opacity: 0.6;
     }
   }
 
@@ -114,6 +122,7 @@ $btn-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     opacity: 0.6;
     cursor: not-allowed;
     pointer-events: none;
+    background-color: $text-secondary !important;
   }
 
   &--loading {
