--- a/front/src/app/pages/user/user.component.html
+++ b/front/src/app/pages/user/user.component.html
@@ -44,6 +44,7 @@
         [externalTopics]="userSubscribedTopicsArray"
         [externalIsLoading]="isTopicsLoading"
         [externalHasError]="onErrorFetchingSubscriptions"
+        [isSubscribeMode]="false"
         class="user__topics">
       </app-topics>
     </div>
