topics container adapté

--- a/front/src/app/pages/topics/topics.component.scss
+++ b/front/src/app/pages/topics/topics.component.scss
@@ -106,5 +106,12 @@
     }
   }
   
+  ::ng-deep {
+    .topics {
+      .page-container {
+        justify-content: flex-start;
+      }
+    }
+  }
   
   
