--- a/front/src/app/components/btn/btn.component.scss
+++ b/front/src/app/components/btn/btn.component.scss
@@ -23,15 +23,19 @@ $btn-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   justify-content: center;
   gap: $spacing-sm;
   padding: $btn-padding;
-  border: none;
   border-radius: $btn-border-radius;
-  background-color: $primary;
-  color: $text-light;
+  color: $text-primary;
   cursor: pointer;
   transition: $btn-transition;
+  background-color: transparent;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border: 1.5px solid $text-primary;
+  width: $btn-width;
+  height: $btn-height;
 
   &:hover {
     background-color: $primary-dark;
+    color: $text-light;
   }
 
   &:disabled {
@@ -64,13 +68,13 @@ $btn-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 
   // Types
   &--submit {
-    background-color: transparent;
+    background-color: $primary;
     color: $text-light;
     border: none;
     box-shadow: none;
 
     &:hover:not(:disabled) {
-      background-color: transparent;
+      background-color: $primary-dark;
     }
 
     .btn__icon {
@@ -105,14 +109,14 @@ $btn-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   &--none {
     width: 160px;
     height: 48px;
-    background-color: transparent;
+    background-color: $primary;
     color: $text-primary;
     border: 1px solid $text-primary;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: none;
     padding: 0;
 
     &:hover:not(:disabled) {
-      background-color: rgba($text-primary, 0.1);
+      background-color: darken($primary, 10%);
     }
   }
 
