--- a/front/src/app/components/header/backlink/backlink.component.scss
+++ b/front/src/app/components/header/backlink/backlink.component.scss
@@ -31,7 +31,9 @@
 }
 
 .backlink__title {
-  margin-left: calc((100vw - 1400px) / 2 - 41px);
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   font-size: $font-size-h1;
   color: $text-primary;
   text-align: center;
@@ -39,18 +41,18 @@
 
 @media screen and (max-width: $tablet) {
   .backlink__title {
+    position: relative;
+    left: 0;
+    transform: none;
     margin-left: 1rem;
     text-align: left;
-
   }
 
   .backlink {
-
-  img {
-    transform: translateX(0);
+    img {
+      transform: translateX(0);
+    }
   }
-  }
-
 
   .backlink-container {
     margin-left: 1rem;
