--- a/front/src/app/pages/posts/post-card/post-card.component.html
+++ b/front/src/app/pages/posts/post-card/post-card.component.html
@@ -4,6 +4,7 @@
     <div class="post-card__meta">
       <time class="post-card__date" [attr.datetime]="date">{{ formattedDate }}</time>
       <span class="post-card__author" aria-label="Auteur">{{ author }}</span>
+      <span class="post-card__topic" aria-label="Topic">{{ topicName }}</span>
     </div>
   </header>
   <div class="post-card__content">
