--- a/front/src/app/pages/posts/post-list/post-list.component.html
+++ b/front/src/app/pages/posts/post-list/post-list.component.html
@@ -56,7 +56,8 @@
               [title]="post.title"
               [description]="post.description"
               [author]="post.author"
-              [date]="post.createdAt">
+              [date]="post.createdAt"
+              [topicName]="post.topicName">
             </app-post-card>
           </div>
         }
